--- a/project.config
+++ b/project.config
@@ -3,5 +3,5 @@
 [submit]
 	action = fast forward only
 	mergeContent = false
-[access "refs/*"]
+[access "refs/heads/*"]
 	owner = group dongle/ffmpeg
