Modify access rules

--- a/project.config
+++ b/project.config
@@ -5,3 +5,5 @@
 	mergeContent = false
 [access "refs/*"]
 	owner = group dongle/ffmpeg
+	create = group dongle/ffmpeg
+	submit = group dongle/ffmpeg
